<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cu.nat.wenisimo.appdomino.fragmentos.FragmentoRelojDomino">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="cu.nat.wenisimo.appdomino.RelojDomino">

        <Chronometer
            android:id="@+id/pareja1CH"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="@string/relog1"
            android:textColor="@android:color/background_dark"
            android:textSize="36sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="368dp"
            android:layout_height="80dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pauseB"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:text="@string/pausa"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/resetearB"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:text="@string/reset"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/addDataB"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/boton_redondo"
                android:text="Data"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <Chronometer
            android:id="@+id/pareja2CH"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/relog1"
            android:textColor="@android:color/background_dark"
            android:textSize="36sp" />

        <Chronometer
            android:id="@+id/Tiempo"
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textSize="8sp"
            android:visibility="visible" />

    </RelativeLayout>
</FrameLayout>
